--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ before_install:
 script:
   - make clean
   - make
+  - ./videoListTest.cpp
 after_success:
   - coveralls --exclude *Test.cpp --exclude gtest/ --gcov-options '\-lpbc'
