--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_install:
 script:
   - make clean
   - make
-  - ./VideoListTest.cpp
+  - ./VideoListTest
 after_success:
   - coveralls --exclude *Test.cpp --exclude gtest/ --gcov-options '\-lpbc'
