--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - mkdir gtest
   - cd gtest
   - git clone https://github.com/google/googletest.git
-  - cd googletest/googletest
+  - cd googletest
   - export GTEST_DIR=$(pwd)
   - cmake ${GTEST_DIR}
   - cd ${CURRENT_PROJ_DIR}
