--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
   
 sudo: enabled
-
+os: linux
+dist: xenial
 language: cpp
 
 before_install:
@@ -8,7 +9,7 @@ before_install:
   - mkdir gtest
   - cd gtest
   - git clone https://github.com/google/googletest.git
-  - cd googletest
+  - cd googletest/googletest
   - export GTEST_DIR=$(pwd)
   - cmake ${GTEST_DIR}
   - cd ${CURRENT_PROJ_DIR}
